[FEAT] Add more sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </div>
         <div>
-            <a class="btn-cta-cyan">REGISTRARME</a>
+            <a class="btn btn-cta-cyan">REGISTRARME</a>
         </div>
     </nav>
     <header>
@@ -35,13 +35,112 @@
                 <P class="title1">¿Estás preparado?</P>
             </div>
             <div class="cta-section">
-                <a class="btn-cta-orange">¡SI, QUIERO RECIBIR INFORMACIÓN!</a>
+                <a class="btn btn-cta-orange">¡SI, QUIERO RECIBIR INFORMACIÓN!</a>
             </div>
         </div>
         <div class="background">
             <img src="./assets/header.jpg" width="100%" alt="background-image">
         </div>
     </header>
+    <section class="section section-1">
+        <div class="left">
+            <img src="./assets/chanchitofeliz.png" alt="">
+        </div>
+        <div class="right">
+            <h1>Tus ahorros en m² se valorizan mejor</h1>
+            <p>En Metro a Metro queremos que seas parte de las inversiones inmobiliarias. Vas a
+                poder invertir en el negocio de bienes raíces y ahorrar para tu casa propia de
+                manera online y con un monto minimo.
+            </p>
+        </div>
+    </section>
+    <section class="section section-2">
+        <div class="item left">
+            <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/jovenfeliz.png" width="100%"
+                alt="img2">
+        </div>
+        <div class="item right">
+            <h1>CUMPLÍ EL SUEÑO DE TU CASA PROPIA</h1>
+            <P>Somos un nuevo crowdfunding que te permite
+                participar en el mercado inmobiliario con
+                pequeños montos para que puedas ir metro a
+                metro creciendo y proyectando el sueño de tu
+                casa propia.</P>
+            <div style="margin: 1em 0;">
+                <a class="btn btn-cta-orange">¡ME INTERESA!</a>
+            </div>
+        </div>
+    </section>
+    <section class="section section-3">
+        <div class="item left">
+            <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/happy-girl.png" width="100%"
+                alt="img2">
+        </div>
+        <div class="item right">
+            <h1>POTENCIÁ TUS AHORROS INVIRTIENDO
+                EN DESARROLLOS INMOBILIARIOS</h1>
+            <P>En Metro a Metro te invitamos a ser parte del
+                negocio inmobiliario ingresando con un monto
+                minimo que te permite comprar un metro
+                cuadrado cada vez que quieras, resguardando
+                tus ahorros en ladrillo.</P>
+            <div style="margin: 1em 0;">
+                <a class="btn btn-cta-orange">¡ME INTERESA!</a>
+            </div>
+        </div>
+    </section>
+
+    <div class="section section-4">
+        <img src="./assets/v44_3.png" alt="">
+    </div>
+
+    <section class="section section-5">
+        <h1>Metro a Metro es la unidad de crowdfunding de METROCUBICO</h1>
+        <p>UNA EMPRESA DEL GRUPO UNIBER</p>
+    </section>
+
+    <section class="section section-6">
+        <h1>Nuestros Proyectos</h1>
+        <div class="marcas">
+            <ul>
+                <li><img src="./assets/v28_3.png" alt=""></li>
+                <li><img src="./assets/v28_4.png" alt=""></li>
+                <li><img src="./assets/v28_5.png" alt=""></li>
+                <li><img src="./assets/v28_6.png" alt=""></li>
+                <li><img src="./assets/v28_7.png" alt=""></li>
+            </ul>
+        </div>
+        <section class="section-7">
+            <div class="item left">
+                <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/v32_43.png" width="100%"
+                    alt="img2">
+            </div>
+            <div class="item right">
+                <h1>te acompañamos en tiempo real y te asesoramos en tu inmersión al mundo inmobiliario.</h1>
+                <P>Somos un nuevo crowdfunding que te permite
+                    participar en el mercado inmobiliario con
+                    pequeños montos para que puedas ir metro a
+                    metro creciendo y proyectando el sueño de tu
+                    casa propia.</P>
+                <div style="margin: 1em 0;">
+                    <a class="btn btn-cta-orange">¡ME INTERESA!</a>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <section class="section-8">
+        <div class="item left">
+            <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/v32_66.png" width="100%"
+                alt="img2">
+        </div>
+        <div class="item right">
+        </div>
+    </section>
+
+    <footer></footer>
+
+
 </body>
 
 </html>
