styles applied only on desktop screen

--- a/index.html
+++ b/index.html
@@ -1,146 +1,206 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;800&display=swap" rel="stylesheet">
-</head>
-
-<body>
+  <body>
     <nav class="menu">
-        <span class="title">Metro a Metro</span>
-        <div class="options">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Cómo funciona</a></li>
-                <li><a href="">Nosotros</a></li>
-            </ul>
-        </div>
-        <div>
-            <a class="btn btn-cta-cyan">REGISTRARME</a>
-        </div>
+      <span class="title">Metro a Metro</span>
+      <div class="options">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Productos</a></li>
+          <li><a href="">Cómo funciona</a></li>
+          <li><a href="">Nosotros</a></li>
+        </ul>
+      </div>
+      <div>
+        <a class="btn btn-cta-cyan">REGISTRARME</a>
+      </div>
     </nav>
     <header>
-        <div class="floating-container">
-            <div class="text-section">
-                <P class="title1">MUY PRONTO VAS A VIVIR UNA</P>
-                <p class="title2">REVOLUCIÓN INMOBILIARIA</p>
-                <p class="title2">EN TUCUMÁN</p>
-                <P class="title1">¿Estás preparado?</P>
-            </div>
-            <div class="cta-section">
-                <a class="btn btn-cta-orange">¡SI, QUIERO RECIBIR INFORMACIÓN!</a>
-            </div>
+      <div class="floating-container">
+        <div class="text-section">
+          <p class="title1">MUY PRONTO VAS A VIVIR UNA</p>
+          <p class="title2">REVOLUCIÓN INMOBILIARIA</p>
+          <p class="title2">EN TUCUMÁN</p>
+          <p class="title1">¿Estás preparado?</p>
         </div>
-        <div class="background">
-            <img src="./assets/header.jpg" width="100%" alt="background-image">
+        <div class="cta-section">
+          <a class="btn btn-cta-orange">¡SI, QUIERO RECIBIR INFORMACIÓN!</a>
         </div>
+      </div>
+      <div class="background">
+        <img src="./assets/header.jpg" width="100%" alt="background-image" />
+      </div>
     </header>
     <section class="section section-1">
-        <div class="left">
-            <img src="./assets/chanchitofeliz.png" alt="">
-        </div>
-        <div class="right">
-            <h1>Tus ahorros en m² se valorizan mejor</h1>
-            <p>En Metro a Metro queremos que seas parte de las inversiones inmobiliarias. Vas a
-                poder invertir en el negocio de bienes raíces y ahorrar para tu casa propia de
-                manera online y con un monto minimo.
-            </p>
-        </div>
+      <div class="left">
+        <img src="./assets/chanchitofeliz.png" alt="" />
+      </div>
+      <div class="right">
+        <h1>Tus ahorros en m² se valorizan mejor</h1>
+        <p>
+          En Metro a Metro queremos que seas parte de las inversiones
+          inmobiliarias. Vas a poder invertir en el negocio de bienes raíces y
+          ahorrar para tu casa propia de manera online y con un monto minimo.
+        </p>
+      </div>
     </section>
     <section class="section section-2">
-        <div class="item left">
-            <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/jovenfeliz.png" width="100%"
-                alt="img2">
+      <div class="item left">
+        <img
+          syle="height: 100%; width: 100%; object-fit: contain;"
+          src="./assets/jovenfeliz.png"
+          width="100%"
+          alt="img2"
+        />
+      </div>
+      <div class="item right">
+        <h1>CUMPLÍ EL SUEÑO DE TU CASA PROPIA</h1>
+        <p>
+          Somos un nuevo crowdfunding que te permite participar en el mercado
+          inmobiliario con pequeños montos para que puedas ir metro a metro
+          creciendo y proyectando el sueño de tu casa propia.
+        </p>
+        <div style="margin: 1em 0">
+          <a class="btn btn-cta-orange">¡ME INTERESA!</a>
         </div>
-        <div class="item right">
-            <h1>CUMPLÍ EL SUEÑO DE TU CASA PROPIA</h1>
-            <P>Somos un nuevo crowdfunding que te permite
-                participar en el mercado inmobiliario con
-                pequeños montos para que puedas ir metro a
-                metro creciendo y proyectando el sueño de tu
-                casa propia.</P>
-            <div style="margin: 1em 0;">
-                <a class="btn btn-cta-orange">¡ME INTERESA!</a>
-            </div>
-        </div>
+      </div>
     </section>
     <section class="section section-3">
-        <div class="item left">
-            <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/happy-girl.png" width="100%"
-                alt="img2">
+      <div class="item left" style="z-index: 3">
+        <img
+          syle="height: 100%; width: 100%; object-fit: contain;"
+          src="./assets/happy-girl.png"
+          width="100%"
+          alt="img2"
+        />
+      </div>
+      <div class="item right">
+        <h1>POTENCIÁ TUS AHORROS INVIRTIENDO EN DESARROLLOS INMOBILIARIOS</h1>
+        <p>
+          En Metro a Metro te invitamos a ser parte del negocio inmobiliario
+          ingresando con un monto minimo que te permite comprar un metro
+          cuadrado cada vez que quieras, resguardando tus ahorros en ladrillo.
+        </p>
+        <div style="margin: 1em 0">
+          <a class="btn btn-cta-orange">¡ME INTERESA!</a>
         </div>
-        <div class="item right">
-            <h1>POTENCIÁ TUS AHORROS INVIRTIENDO
-                EN DESARROLLOS INMOBILIARIOS</h1>
-            <P>En Metro a Metro te invitamos a ser parte del
-                negocio inmobiliario ingresando con un monto
-                minimo que te permite comprar un metro
-                cuadrado cada vez que quieras, resguardando
-                tus ahorros en ladrillo.</P>
-            <div style="margin: 1em 0;">
-                <a class="btn btn-cta-orange">¡ME INTERESA!</a>
-            </div>
-        </div>
+      </div>
     </section>
 
     <div class="section section-4">
-        <img src="./assets/v44_3.png" alt="">
+      <h2 class="title-section-4">¿Cómo funciona?</h2>
+      <div
+        style="
+          position: absolute;
+          transform: skewY(-4deg);
+          background-color: #f7f7f7;
+          width: 100%;
+          top: -60px;
+          z-index: 1;
+          height: 350px;
+        "
+      ></div>
+      <p class="steps-section-4 first-step-section-4">
+        <strong
+          class="steps-title-section-4"
+          >Registrate</strong
+        >
+        <br />
+        Ingresá tus datos para conocer los proyectos que tenemos para vos.
+      </p>
+      <p class="steps-section-4 fourt-step-section-4">
+        <strong class="steps-title-section-4">Disfrutá</strong
+        >
+        <br />
+        Cuando finaliza el proyecto el inmueble se vende y vos decidís qué hacer
+        con tus metros.
+      </p>
+      <p class="steps-section-4 second-step-section-4">
+        <strong class="steps-title-section-4">Elegí</strong>
+        <br />
+        Selecciona el proyecto que más te guste.
+      </p>
+      <p class="steps-section-4 third-step-section-4">
+        <strong class="steps-title-section-4">Acompañá</strong>
+        <br />
+        Seguí tus metros mes a mes.
+      </p>
+      <div class="img-container-section-4">
+        <img
+          src="./assets/v44_3.png"
+          alt=""
+          style="position: absolute; width: 730px; height: 725px; z-index: 2"
+        />
+      </div>
     </div>
 
     <section class="section section-5">
-        <h1>Metro a Metro es la unidad de crowdfunding de METROCUBICO</h1>
-        <p>UNA EMPRESA DEL GRUPO UNIBER</p>
+      <h1>Metro a Metro es la unidad de crowdfunding de METROCUBICO</h1>
+      <p>UNA EMPRESA DEL GRUPO UNIBER</p>
     </section>
 
     <section class="section section-6">
-        <h1>Nuestros Proyectos</h1>
-        <div class="marcas">
-            <ul>
-                <li><img src="./assets/v28_3.png" alt=""></li>
-                <li><img src="./assets/v28_4.png" alt=""></li>
-                <li><img src="./assets/v28_5.png" alt=""></li>
-                <li><img src="./assets/v28_6.png" alt=""></li>
-                <li><img src="./assets/v28_7.png" alt=""></li>
-            </ul>
+      <h1>Nuestros Proyectos</h1>
+      <div class="marcas">
+        <ul>
+          <li><img src="./assets/v28_3.png" alt="" /></li>
+          <li><img src="./assets/v28_4.png" alt="" /></li>
+          <li><img src="./assets/v28_5.png" alt="" /></li>
+          <li><img src="./assets/v28_6.png" alt="" /></li>
+          <li><img src="./assets/v28_7.png" alt="" /></li>
+        </ul>
+      </div>
+      <section class="section-7">
+        <div class="item left">
+          <img
+            syle="height: 100%; width: 100%; object-fit: contain;"
+            src="./assets/v32_43.png"
+            width="100%"
+            alt="img2"
+          />
         </div>
-        <section class="section-7">
-            <div class="item left">
-                <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/v32_43.png" width="100%"
-                    alt="img2">
-            </div>
-            <div class="item right">
-                <h1>te acompañamos en tiempo real y te asesoramos en tu inmersión al mundo inmobiliario.</h1>
-                <P>Somos un nuevo crowdfunding que te permite
-                    participar en el mercado inmobiliario con
-                    pequeños montos para que puedas ir metro a
-                    metro creciendo y proyectando el sueño de tu
-                    casa propia.</P>
-                <div style="margin: 1em 0;">
-                    <a class="btn btn-cta-orange">¡ME INTERESA!</a>
-                </div>
-            </div>
-        </section>
+        <div class="item right">
+          <h1>
+            te acompañamos en tiempo real y te asesoramos en tu inmersión al
+            mundo inmobiliario.
+          </h1>
+          <p>
+            Somos un nuevo crowdfunding que te permite participar en el mercado
+            inmobiliario con pequeños montos para que puedas ir metro a metro
+            creciendo y proyectando el sueño de tu casa propia.
+          </p>
+          <div style="margin: 1em 0">
+            <a class="btn btn-cta-orange">¡ME INTERESA!</a>
+          </div>
+        </div>
+      </section>
     </section>
 
     <section class="section-8">
-        <div class="item left">
-            <img syle='height: 100%; width: 100%; object-fit: contain;' src="./assets/v32_66.png" width="100%"
-                alt="img2">
-        </div>
-        <div class="item right">
-        </div>
+      <div class="item left">
+        <img
+          syle="height: 100%; width: 100%; object-fit: contain;"
+          src="./assets/v32_66.png"
+          width="100%"
+          alt="img2"
+        />
+      </div>
+      <div class="item right"></div>
     </section>
 
     <footer></footer>
-
-
-</body>
-
+  </body>
 </html>
